# oeffdienst-gehaltsscraper

./: README.md  pyproject.toml  scrape-py.py  scrape-py.qmd
py/: fun.py
