[project]
name = "gehaltsrechner-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ipykernel>=6.29.5",
    "polars>=1.7.1",
    "requests>=2.32.3",
    "typing-extensions>=4.12.2",
]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
]
